fix: increeased .sp width on mobile; .sp short width on mobile occasionally leading to unwanted cutoffs

--- a/assets/style.css
+++ b/assets/style.css
@@ -166,6 +166,11 @@ body.sp-only .split:not(h1, footer) [lang="en"]{
         padding-inline-start: 3rem;
     }
 
+    .split .sp{
+        width: 25rem;
+        max-width: 100%;
+    }
+
     h2.split {
         gap: 0;
         margin: 4rem auto 1rem;
